# monopyly

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  config.mk  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
monopyly/: CHANGELOG.md  README.md  __init__.py  auth.py  config.py  credit.py  db.py  definitions.py  form_utils.py  forms.py  schema.sql  utils.py
monopyly/analytics/: actions.py  blueprint.py  routes.py
monopyly/auth/: __init__.py  actions.py  blueprint.py  routes.py  tools.py
monopyly/banking/: __init__.py  accounts.py  actions.py  banks.py  blueprint.py  filters.py  forms.py  routes.py  transactions.py
monopyly/cli/: apps.py  backup_db.py  console.py  interact.py  launch.py  modes.py  run.py
monopyly/common/: actions.py  form_utils.py  transactions.py  utils.py
monopyly/common/forms/: __init__.py  _forms.py  fields.py  utils.py  validators.py
monopyly/config/: __init__.py  default_settings.py  settings.py
monopyly/core/: __init__.py  actions.py  blueprint.py  context_processors.py  errors.py  filters.py  internal_transactions.py  routes.py
monopyly/credit/: __init__.py  accounts.py  actions.py  blueprint.py  cards.py  constants.py  filters.py  forms.py  routes.py  statements.py  tags.py  tools.py  transactions.py
monopyly/credit/transactions/: __init__.py  _transactions.py  activity.py
monopyly/database/: __init__.py  handler.py  models.py  preloads.sql  schema.py  schema.sql  utils.py  views.sql
monopyly/db/: __init__.py  fields.py  handler.py  preloads.sql  schema.sql  utils.py  views.sql
monopyly/db/handler/: __init__.py  queries.py
monopyly/scripts/: screenshot_application.py
monopyly/static/: chartist-1.5.0.min.js  jquery-3.7.0.min.js  jquery-3.7.1.min.js
monopyly/static/css/: style.css
monopyly/static/js/: add-subtransaction.js  add-transfer.js  add_subtransaction.js  add_tag.js  add_tags.js  add_transfer.js  autocomplete-transaction.js  autocomplete_banking_transaction.js  autocomplete_card.js  autocomplete_credit_transaction.js  autocomplete_transaction.js  bind-tag-actions.js  bind_tag_actions.js  card_filter.js  create-balance-chart.js  create-category-chart.js  create-tag-stats-chart.js  create_balance_chart.js  define-filter.js  define_filter.js  display-new-account-type-inputs.js  display-new-bank-inputs.js  display-new-credit-account-inputs.js  display_new_account_inputs.js  display_new_account_type_inputs.js  display_new_bank_inputs.js  display_new_credit_account_inputs.js  expand-bank-account.js  expand-bank.js  expand-transaction.js  expand_bank.js  expand_bank_account.js  expand_bank_transaction.js  expand_credit_transaction.js  expand_transaction.js  filter_cards.js  flip_card.js  hide-homepage-block.js  highlight-discrepant-transactions.js  infer_card.js  (+33 more)
monopyly/templates/: about.html  credits.html  index.html  layout.html  profile.html  settings.html  story.html
monopyly/templates/auth/: change_password.html  login.html  register.html
monopyly/templates/banking/: account_form.html  account_form_page_new.html  account_info.html  account_page.html  account_summaries.html  account_summaries_page.html  account_summary.html  account_summary_page.html  accounts_page.html  transactions_page.html
monopyly/templates/common/: form_page.html  tag_tree.html  tags_page.html
monopyly/templates/core/: credits.html  index.html  profile.html  story.html
monopyly/templates/credit/: account_form.html  account_form_page_update.html  account_page.html  account_submission_page.html  card_back.html  card_form.html  card_form_page.html  card_form_page_new.html  card_form_page_update.html  card_front.html  card_page.html  card_submission_page.html  cards.html  cards_page.html  category_tree.html  new_transaction.html  statement_info.html  statement_page.html  statement_reconciliation_inquiry.html  statement_reconciliation_page.html  statement_reconciliation_summary.html  statement_summary.html  statements.html  statements_page.html  subcategory_tree.html  submission.html  subtag_tree.html  subtransaction_form.html  tag_list.html  tag_tree.html  tags_page.html  transaction.html  transaction_form.html  transaction_form_page.html  transaction_form_page_new.html  transaction_form_page_update.html  transaction_page.html  transaction_submission_page.html  (+5 more)
scripts/: backup_db.py  compound_interest_calculator.py  monopyly  reload_old_data.py
test/: __init__.py  conftest.py  data.sql  helpers.py  test_auth.py  test_factory.py  test_form_utils.py  test_utils.py
test/auth/: test_auth.py
test/banking/: __init__.py  test_accounts.py  test_actions.py  test_banks.py  test_forms.py  test_routes.py  test_transactions.py
test/banks/: test_accounts.py  test_banks.py  test_transactions.py
test/common/: __init__.py  helpers.py  test_actions.py  test_form_utils.py  test_transactions.py  test_utils.py
test/core/: test_actions.py  test_context_processors.py  test_filters.py  test_internal_transactions.py  test_routes.py
test/credit/: __init__.py  test_accounts.py  test_actions.py  test_cards.py  test_forms.py  test_routes.py  test_statements.py  test_transactions.py
test/database/: test_db.py  test_models.py  test_utils.py
test/db/: test_db.py  test_db_handler.py
tests/: conftest.py  data.sql  test_auth.py  test_cli.py  test_db.py  test_factory.py
tests/analytics/: test_actions.py  test_routes.py
tests/auth/: test_auth.py
tests/banking/: test_accounts.py  test_actions.py  test_banks.py  test_filters.py  test_forms.py  test_routes.py  test_transactions.py
tests/cli/: test_apps.py
tests/common/: __init__.py  helpers.py  test_transactions.py  test_utils.py
tests/core/: __init__.py  test_actions.py  test_context_processors.py  test_errors.py  test_filters.py  test_internal_transactions.py  test_routes.py
tests/credit/: test_accounts.py  test_actions.py  test_cards.py  test_forms.py  test_routes.py  test_statements.py  test_transactions.py
tests/database/: __init__.py  test_db.py
tests/helpers/: test_helpers.py  test_tag_helpers.py
(+106 files in other folders)
