[build-system]
requires = ['hatchling', 'hatch-vcs', 'hatch-fancy-pypi-readme']
build-backend = 'hatchling.build'

[project]
name = 'monopyly'
authors = [
  { name = 'Mitch Negus', email = 'mitchnegus57@gmail.com' },
]
description = 'A homemade personal finance manager.'
license = { text = 'GNU GPLv3' }
requires-python = '>=3.10,<3.11'
dependencies = [
  'authanor==1.1.0',
  'Flask==3.0.0',
  'Flask-WTF==1.2.1',
  'fuisce==1.0.2',
  'gunicorn==21.2.0',
  'Markdown==3.5.1',
  'python-dateutil==2.8.2',
  'rich==13.7.0',
  'SQLAlchemy==2.0.23',
]
keywords = [
  'Finance',
  'Personal Finance',
]
classifiers = [
  'Development Status :: 3 - Alpha',
  'Environment :: Web Environment',
  'Framework :: Flask',
  'Intended Audience :: End Users/Desktop',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Natural Language :: English',
  'Operating System :: OS Independent',
  'Programming Language :: Python',
  'Topic :: Office/Business :: Financial',
  'Topic :: Office/Business :: Financial :: Accounting',
  'Topic :: Office/Business :: Financial :: Spreadsheet',
]
dynamic = ['readme', 'version']

[project.scripts]
monopyly = 'monopyly.cli.run:main'

[project.urls]
Download = 'https://pypi.org/project/monopyly'
Homepage = 'http://monopyly.com'
Repository = 'https://github.com/mitchnegus/monopyly'
Changelog = 'https://github.com/mitchnegus/monopyly/blob/main/CHANGELOG.md'

[tool.hatch.version]
source = 'vcs'

[tool.hatch.build.targets.sdist]
include = [
  '/README.md',
  '/monopyly',
]
exclude = [
  '*.pyc',
]

[tool.hatch.build.hooks.vcs]
version-file = 'monopyly/_version.py'

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = 'text/markdown'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = 'monopyly/README.md'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'src="((?!https?:\/\/)\S+?)"'
replacement = 'src="https://raw.githubusercontent.com/mitchnegus/monopyly/main/\1"'

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/mitchnegus/monopyly/blob/main/\g<2>)'

[tool.pytest.ini_options]
addopts = [
  '--import-mode=importlib',
]
pythonpath = ["tests/helpers"]
norecursedirs = ["tests/helpers"]
filterwarnings = [
  'ignore:INSECURE:UserWarning',
]

[tool.coverage.run]
omit = [
  'tests/*',
  'monopyly/_version.py',
]

[tool.coverage.report]
exclude_lines = [
  'raise NotImplementedError',
]

[tool.black]
force-exclude = 'monopyly/_version.py'

[tool.isort]
profile = 'black'
src_paths = ['monopyly', 'tests']
known_local_folder = ['test_helpers', 'test_tag_helpers']
